Abhängigkeiten aus Testprojekten entfernt

--- a/TestProjekte/03_Selector_LocaleTest/project1.lpi
+++ b/TestProjekte/03_Selector_LocaleTest/project1.lpi
@@ -371,7 +371,7 @@
     </RunParams>
     <RequiredPackages Count="2">
       <Item1>
-        <PackageName Value="TheSelector"/>
+        <PackageName Value="TheOthers"/>
       </Item1>
       <Item2>
         <PackageName Value="LCL"/>
