--- a/TestProjekte/01_Selector_WithDrawing/project1.lpi
+++ b/TestProjekte/01_Selector_WithDrawing/project1.lpi
@@ -151,7 +151,7 @@
     </RunParams>
     <RequiredPackages Count="2">
       <Item1>
-        <PackageName Value="TheSelector"/>
+        <PackageName Value="TheOthers"/>
       </Item1>
       <Item2>
         <PackageName Value="LCL"/>
